--- a/OpenGL Framework/OpenGL Framework.vcxproj.filters
+++ b/OpenGL Framework/OpenGL Framework.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="..\src\Shader.cpp">
       <Filter>Source Files\Framework\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Log.cpp">
+      <Filter>Source Files\Framework</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Buffer.h">
@@ -131,9 +134,6 @@
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLVertexArray.h">
       <Filter>Header Files\Platform\OpenGL</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\Time.h">
-      <Filter>Header Files\Framework</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\Shape\Shape.h">
       <Filter>Header Files\Framework\Shape</Filter>
     </ClInclude>
@@ -144,6 +144,9 @@
       <Filter>Header Files\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="..\include\Log.h">
+      <Filter>Header Files\Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\FWTime.h">
       <Filter>Header Files\Framework</Filter>
     </ClInclude>
   </ItemGroup>
