--- a/OpenGL Framework/OpenGL Framework.vcxproj.filters
+++ b/OpenGL Framework/OpenGL Framework.vcxproj.filters
@@ -103,7 +103,7 @@
       <Filter>Source Files\Framework\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLTexture.cpp">
-      <Filter>Source Files\Platform</Filter>
+      <Filter>Source Files\Platform\OpenGL</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
