--- a/OpenGL Framework/OpenGL Framework.vcxproj
+++ b/OpenGL Framework/OpenGL Framework.vcxproj
@@ -142,8 +142,10 @@
     <ClCompile Include="..\src\Application.cpp" />
     <ClCompile Include="..\src\Buffer.cpp" />
     <ClCompile Include="..\src\Camera.cpp" />
+    <ClCompile Include="..\src\GraphicsContext.cpp" />
     <ClCompile Include="..\src\Log.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLBuffer.cpp" />
+    <ClCompile Include="..\src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLTexture.cpp" />
@@ -162,8 +164,10 @@
     <ClInclude Include="..\include\Application.h" />
     <ClInclude Include="..\include\Buffer.h" />
     <ClInclude Include="..\include\Camera.h" />
+    <ClInclude Include="..\include\GraphicsContext.h" />
     <ClInclude Include="..\include\Log.h" />
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLBuffer.h" />
+    <ClInclude Include="..\include\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLTexture.h" />
