--- a/OpenGL Framework/OpenGL Framework.vcxproj
+++ b/OpenGL Framework/OpenGL Framework.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLTexture.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="..\src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="..\src\RenderCommand.cpp" />
     <ClCompile Include="..\src\Renderer.cpp" />
     <ClCompile Include="..\src\RendererAPI.cpp" />
@@ -161,6 +162,7 @@
     <ClCompile Include="..\src\Texture.cpp" />
     <ClCompile Include="..\src\Time.cpp" />
     <ClCompile Include="..\src\VertexArray.cpp" />
+    <ClCompile Include="..\src\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Application.h" />
@@ -180,6 +182,7 @@
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLTexture.h" />
     <ClInclude Include="..\include\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="..\include\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="..\include\RendererAPI.h" />
     <ClInclude Include="..\include\RenderCommand.h" />
     <ClInclude Include="..\include\Renderer.h" />
@@ -189,6 +192,7 @@
     <ClInclude Include="..\include\FWTime.h" />
     <ClInclude Include="..\include\Texture.h" />
     <ClInclude Include="..\include\VertexArray.h" />
+    <ClInclude Include="..\include\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Minecraft\bin\Debug\x64\shaders\demoShader.glsl">
