Direct x further setup. Current is pipelines.

--- a/OpenGL Framework/OpenGL Framework.vcxproj
+++ b/OpenGL Framework/OpenGL Framework.vcxproj
@@ -145,8 +145,12 @@
     <ClCompile Include="..\src\Camera.cpp" />
     <ClCompile Include="..\src\GraphicsContext.cpp" />
     <ClCompile Include="..\src\Log.cpp" />
+    <ClCompile Include="..\src\Platform\DirectX\CommandQueue.cpp" />
+    <ClCompile Include="..\src\Platform\DirectX\DirectXBuffer.cpp" />
     <ClCompile Include="..\src\Platform\DirectX\DirectXContext.cpp" />
     <ClCompile Include="..\src\Platform\DirectX\DirectXRendererAPI.cpp" />
+    <ClCompile Include="..\src\Platform\DirectX\DirectXShader.cpp" />
+    <ClCompile Include="..\src\Platform\DirectX\DirectXVertexArray.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="..\src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
@@ -173,7 +177,11 @@
     <ClInclude Include="..\include\Events\Event.h" />
     <ClInclude Include="..\include\GraphicsContext.h" />
     <ClInclude Include="..\include\Log.h" />
+    <ClInclude Include="..\include\Platform\DirectX\CommandQueue.h" />
     <ClInclude Include="..\include\Platform\DirectX\d3dx12.h" />
+    <ClInclude Include="..\include\Platform\DirectX\DirectXShader.h" />
+    <ClInclude Include="..\include\Platform\DirectX\DirectXVertexArray.h" />
+    <ClInclude Include="..\include\Platform\DirectX\DirectXBuffer.h" />
     <ClInclude Include="..\include\Platform\DirectX\DirectXContext.h" />
     <ClInclude Include="..\include\Platform\DirectX\DirectXRendererAPI.h" />
     <ClInclude Include="..\include\Platform\DirectX\Helpers.h" />
