--- a/OpenGL Framework/OpenGL Framework.vcxproj
+++ b/OpenGL Framework/OpenGL Framework.vcxproj
@@ -185,6 +185,7 @@
     <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanValidationLayers.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanContext.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanRendererAPI.cpp" />
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanShader.cpp" />
     <ClCompile Include="..\src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="..\src\Renderer\Buffer.cpp" />
     <ClCompile Include="..\src\Renderer\GraphicsContext.cpp" />
@@ -251,6 +252,7 @@
     <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanValidationLayers.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanContext.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanRendererAPI.h" />
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanShader.h" />
     <ClInclude Include="..\include\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="..\include\Renderer\Buffer.h" />
     <ClInclude Include="..\include\Renderer\GraphicsContext.h" />
