--- a/OpenGL Framework/OpenGL Framework.vcxproj.filters
+++ b/OpenGL Framework/OpenGL Framework.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClCompile Include="..\src\Platform\Vulkan\VulkanShader.cpp">
       <Filter>Source Files\Platform\Vulkan</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanCommand.cpp">
+      <Filter>Source Files\Platform\Vulkan\Internal</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Camera.h">
@@ -466,6 +469,9 @@
     </ClInclude>
     <ClInclude Include="..\include\Platform\Vulkan\VulkanShader.h">
       <Filter>Header Files\Platform\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanCommand.h">
+      <Filter>Header Files\Platform\Vulkan\Internal</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
