--- a/OpenGL Framework/OpenGL Framework.vcxproj.filters
+++ b/OpenGL Framework/OpenGL Framework.vcxproj.filters
@@ -273,6 +273,9 @@
     <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanCommand.cpp">
       <Filter>Source Files\Platform\Vulkan\Internal</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanSync.cpp">
+      <Filter>Source Files\Platform\Vulkan\Internal</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Camera.h">
@@ -471,6 +474,9 @@
       <Filter>Header Files\Platform\Vulkan</Filter>
     </ClInclude>
     <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanCommand.h">
+      <Filter>Header Files\Platform\Vulkan\Internal</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanSync.h">
       <Filter>Header Files\Platform\Vulkan\Internal</Filter>
     </ClInclude>
   </ItemGroup>
