--- a/Engine-Framework/Engine-Framework.vcxproj
+++ b/Engine-Framework/Engine-Framework.vcxproj
@@ -101,7 +101,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\VulkanSDK\1.1.130.0\Include;$(SolutionDir)deps/imgui/impl;$(SolutionDir)deps/imgui/include;$(SolutionDir)deps/assimp/include;$(ProjectDir)/../deps\stbi;$(ProjectDir)/../deps/glm;$(ProjectDir)/../deps/spdlog/include;$(ProjectDir)/../deps/glfw/include;$(ProjectDir)/../deps/glad/include;$(ProjectDir)/../include</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>IMGUI_IMPL_OPENGL_LOADER_GLAD;_CRT_SECURE_NO_WARNINGS;GLM_FORCE_SWIZZLE;GLM_FORCE_RADIANS;GLM_FORCE_PURE;GLM_ENABLE_EXPERIMENTAL;GLEW_STATIC;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLFW_INCLUDE_NONE;IMGUI_IMPL_OPENGL_LOADER_GLAD;_CRT_SECURE_NO_WARNINGS;GLM_FORCE_SWIZZLE;GLM_FORCE_RADIANS;GLM_FORCE_PURE;GLM_ENABLE_EXPERIMENTAL;GLEW_STATIC;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
