Added vulkan index and vertex buffers.

--- a/Engine-Framework/Engine-Framework.vcxproj
+++ b/Engine-Framework/Engine-Framework.vcxproj
@@ -185,9 +185,11 @@
     <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanSwapchain.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanSync.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanValidationLayers.cpp" />
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanBuffer.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanContext.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanRendererAPI.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanShader.cpp" />
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanVertexArray.cpp" />
     <ClCompile Include="..\src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="..\src\Renderer\Buffer.cpp" />
     <ClCompile Include="..\src\Renderer\GraphicsContext.cpp" />
@@ -254,9 +256,11 @@
     <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanSwapchain.h" />
     <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanSync.h" />
     <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanValidationLayers.h" />
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanBuffer.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanContext.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanRendererAPI.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanShader.h" />
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanVertexArray.h" />
     <ClInclude Include="..\include\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="..\include\Renderer\Buffer.h" />
     <ClInclude Include="..\include\Renderer\GraphicsContext.h" />
