--- a/Engine-Framework/Engine-Framework.vcxproj.filters
+++ b/Engine-Framework/Engine-Framework.vcxproj.filters
@@ -276,6 +276,12 @@
     <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanSync.cpp">
       <Filter>Source Files\Platform\Vulkan\Internal</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanBuffer.cpp">
+      <Filter>Source Files\Platform\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanVertexArray.cpp">
+      <Filter>Source Files\Platform\Vulkan</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Camera.h">
@@ -478,6 +484,12 @@
     </ClInclude>
     <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanSync.h">
       <Filter>Header Files\Platform\Vulkan\Internal</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanBuffer.h">
+      <Filter>Header Files\Platform\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanVertexArray.h">
+      <Filter>Header Files\Platform\Vulkan</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
