Added VulkanGBuffer, work on deps for commands for shader/material etc.

--- a/Engine-Framework/Engine-Framework.vcxproj
+++ b/Engine-Framework/Engine-Framework.vcxproj
@@ -187,12 +187,14 @@
     <ClCompile Include="..\src\Platform\Vulkan\Internal\VulkanValidationLayers.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanBuffer.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanContext.cpp" />
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanGBuffer.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanMaterial.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanRendererAPI.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanShader.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanVertexArray.cpp" />
     <ClCompile Include="..\src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="..\src\Renderer\Buffer.cpp" />
+    <ClCompile Include="..\src\Renderer\GBuffer.cpp" />
     <ClCompile Include="..\src\Renderer\GraphicsContext.cpp" />
     <ClCompile Include="..\src\Renderer\Material.cpp" />
     <ClCompile Include="..\src\Renderer\RenderCommand.cpp" />
@@ -258,6 +260,7 @@
     <ClInclude Include="..\include\Platform\Vulkan\Internal\VulkanValidationLayers.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanBuffer.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanContext.h" />
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanGBuffer.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanMaterial.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanRendererAPI.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanShader.h" />
@@ -265,6 +268,7 @@
     <ClInclude Include="..\include\Platform\Vulkan\VulkanVertexArray.h" />
     <ClInclude Include="..\include\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="..\include\Renderer\Buffer.h" />
+    <ClInclude Include="..\include\Renderer\GBuffer.h" />
     <ClInclude Include="..\include\Renderer\GraphicsContext.h" />
     <ClInclude Include="..\include\Renderer\Material.h" />
     <ClInclude Include="..\include\Renderer\RenderCommand.h" />
