--- a/Engine-Framework/Engine-Framework.vcxproj.filters
+++ b/Engine-Framework/Engine-Framework.vcxproj.filters
@@ -282,6 +282,12 @@
     <ClCompile Include="..\src\Platform\Vulkan\VulkanMaterial.cpp">
       <Filter>Source Files\Platform\Vulkan</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Renderer\GBuffer.cpp">
+      <Filter>Source Files\Framework\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanGBuffer.cpp">
+      <Filter>Source Files\Platform\Vulkan</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Camera.h">
@@ -492,6 +498,12 @@
       <Filter>Header Files\Platform\Vulkan</Filter>
     </ClInclude>
     <ClInclude Include="..\include\Platform\Vulkan\VulkanMaterial.h">
+      <Filter>Header Files\Platform\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Renderer\GBuffer.h">
+      <Filter>Header Files\Framework\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanGBuffer.h">
       <Filter>Header Files\Platform\Vulkan</Filter>
     </ClInclude>
   </ItemGroup>
