--- a/Engine-Framework/Engine-Framework.vcxproj
+++ b/Engine-Framework/Engine-Framework.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="..\src\Platform\Vulkan\VulkanMaterial.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanRendererAPI.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanShader.cpp" />
+    <ClCompile Include="..\src\Platform\Vulkan\VulkanTexture.cpp" />
     <ClCompile Include="..\src\Platform\Vulkan\VulkanVertexArray.cpp" />
     <ClCompile Include="..\src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="..\src\Renderer\Buffer.cpp" />
@@ -264,6 +265,7 @@
     <ClInclude Include="..\include\Platform\Vulkan\VulkanMaterial.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanRendererAPI.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanShader.h" />
+    <ClInclude Include="..\include\Platform\Vulkan\VulkanTexture.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanUtils.h" />
     <ClInclude Include="..\include\Platform\Vulkan\VulkanVertexArray.h" />
     <ClInclude Include="..\include\Platform\Windows\WindowsWindow.h" />
