--- a/bin/x64/Debug/imgui.ini
+++ b/bin/x64/Debug/imgui.ini
@@ -8,6 +8,17 @@ Size=300,500
 Collapsed=0
 
 [Window][Material Window]
+Pos=0,0
 Size=250,720
 Collapsed=1
+
+[Window][ImGui Demo]
+Pos=168,28
+Size=550,680
+Collapsed=0
+
+[Window][Debug Window]
+Pos=900,0
+Size=250,50
+Collapsed=0
 
