--- a/Engine-Framework/Engine-Framework.vcxproj.filters
+++ b/Engine-Framework/Engine-Framework.vcxproj.filters
@@ -291,6 +291,12 @@
     <ClCompile Include="..\src\Platform\Vulkan\VulkanTexture.cpp">
       <Filter>Source Files\Platform\Vulkan</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\GUI\GUIDebug.cpp">
+      <Filter>Source Files\Framework\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Platform\OpenGL\OpenGLGBuffer.cpp">
+      <Filter>Source Files\Platform\OpenGL</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Camera.h">
@@ -511,6 +517,12 @@
     </ClInclude>
     <ClInclude Include="..\include\Platform\Vulkan\VulkanTexture.h">
       <Filter>Header Files\Platform\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\GUI\GUIDebug.h">
+      <Filter>Header Files\Framework\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Platform\OpenGL\OpenGLGBuffer.h">
+      <Filter>Header Files\Platform\OpenGL</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
